# kingsejong-lang

./: .clang-format  .gitignore  .ksjfmtrc  .ksjlintrc  CHANGELOG.md  CMakeLists.txt  Doxyfile  ISSUES.md  KNOWN_ISSUES.md  LICENSE  README.md  RELEASE_NOTES_v0.4.0.md  install.ps1  install.sh  test_io_simple.ksj  test_json_simple.ksj  test_korean_underscore.ksj  test_lsp_features.ksj  test_underscore.ksj
.claude/: settings.local.json  system_prompt_additions.md
.github/workflows/: ci.yml  deploy-playground.yml
benchmarks/: BENCHMARK_RESULTS.md  README.md  arithmetic.ksj  array_ops.ksj  fibonacci.ksj  fibonacci_15.ksj  loop_intensive.ksj  measure_memory.py  memory_test.ksj  regression_results.json  regression_test.py  run_benchmarks.py
benchmarks/jit_tier2/: conditional_function.ksj  run_jit_tier2_benchmarks.py  small_function_intensive.ksj  stdlib_function.ksj
benchmarks/python/: fibonacci.py  loop_intensive.py
docs/: ANALYSIS.md  ANALYSIS_AST_EXECUTION.md  ANALYSIS_BUGS.md  ANALYSIS_COMPARISON.md  ANALYSIS_PARSER.md  ARCHITECTURE_ANALYSIS.md  CLASS_SYSTEM_DESIGN.md  CODING_STYLE.md  CONFIG_GUIDE.md  CONTRIBUTING.md  DEBUGGER_GUIDE.md  EVALUATOR_REFACTORING_PLAN.md  F1.16_BUILTIN_PLAN.md  F1.17_REPL_PLAN.md  F1.18_FILE_EXECUTION_PLAN.md  FEATURES.md  IMPLEMENTATION_TODO.md  INSTALL.md  JIT_TIER1_DESIGN.md  JIT_TIER2_DESIGN.md  JIT_TIER2_PHASE4_STATUS.md  KINGSEJONG_LANGUAGE_ANALYSIS.md  KINGSEJONG_VM_ANALYSIS.md  LANGUAGE_DESIGN_PHILOSOPHY.md  LANGUAGE_REFERENCE.md  LIBRARY_GUIDE.md  LINTER_RULES.md  LL4_LOOKAHEAD_IMPLEMENTATION.md  MEMORY_POOLING_DESIGN.md  PERFORMANCE_ANALYSIS.md  PHASE5_ROADMAP.md  PHASE9_REFACTORING_PLAN.md  PLAYGROUND_TUTORIAL.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  ROADMAP.md  SEJONG_FEATURES.md  SEJONG_IMPLEMENTATION.md  SEJONG_STARTER_GUIDE.md  SEMANTIC_ANALYZER_ANALYSIS.md  (+8 more)
docs/analysis/: ANALYSIS.md  ANALYSIS_AST_EXECUTION.md  ANALYSIS_BUGS.md  ANALYSIS_COMPARISON.md  ANALYSIS_IMPROVEMENTS.md  ANALYSIS_LEXER.md  ANALYSIS_PARSER.md  ARCHITECTURE_ANALYSIS.md  KINGSEJONG_LANGUAGE_ANALYSIS.md  README.md  SEMANTIC_ANALYZER_ANALYSIS.md  code-review-2025-11-09.md  updated-analysis-2025-11-08.md
docs/design/: DEBUGGER_DESIGN.md  ERROR_REPORTER_DESIGN.md  FEATURES.md  GC_DESIGN.md  IMPLEMENTATION.md  LSP_DESIGN.md  PROJECT_OVERVIEW.md  SEJONG_PROJECT_OVERVIEW.md  STARTER_GUIDE.md
docs/releases/: RELEASE_NOTES.md  v0.2.0.md
docs/research/: JIT_COMPILER_RESEARCH.md  LLVM_INTEGRATION.md
examples/: .ksjlint.json  array_methods.ksj  array_slicing_test.ksj  async_await.ksj  calculator.ksj  class_example.ksj  closure.ksj  conditional.ksj  constructor_advanced.ksj  constructor_example.ksj  dictionary_basic.ksj  dictionary_methods_test.ksj  exception_handling.ksj  fibonacci.ksj  field_assignment.ksj  field_complete.ksj  function.ksj  functional_array.ksj  hello.ksj  hot_path_detection.ksj  jit_benchmark.ksj  jit_hotpath_demo.cpp  loop.ksj  method_basic.ksj  method_complete.ksj  method_example.ksj  nested_loops.ksj  prime_finder.ksj  recursion.ksj  simple_loop_test.ksj  sorting_demo.ksj  statistics.ksj  stdlib_array.ksj  stdlib_collections.ksj  stdlib_crypto.ksj  stdlib_db.ksj  stdlib_http.ksj  stdlib_io.ksj  stdlib_json.ksj  stdlib_math.ksj  (+13 more)
examples/package_example/: package.ksj
include/debugger/: BreakpointManager.h  CallStack.h  CommandParser.h  Debugger.h  SourceCodeViewer.h  WatchpointManager.h
include/jit/: HotPathDetector.h  InliningAnalyzer.h  InliningTransformer.h  JITCompilerT1.h  JITCompilerT2.h
include/lsp/: CompletionProvider.h  DiagnosticsProvider.h  DocumentManager.h  JsonRpc.h  LanguageServer.h  LspUtils.h  SymbolCollector.h  SymbolTable.h
include/security/: NetworkSecurityManager.h  SecurityManager.h
include/version/: Version.h
lab/: idea.md
scripts/: build-wasm.sh
src/: ksjpm.cpp  main.cpp
src/ast/: Expression.h  Node.cpp  Node.h  SourceLocation.h  Statement.h
src/bytecode/: Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  OpCode.cpp  OpCode.h  VM.cpp  VM.h
src/common/: Logger.cpp  Logger.h  UTF8Utils.h
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/debugger/: BreakpointManager.cpp  CallStack.cpp  CommandParser.cpp  Debugger.cpp  SourceCodeViewer.cpp  WatchpointManager.cpp
src/error/: Error.h  ErrorMessages.h  ErrorReporter.cpp  ErrorReporter.h
src/evaluator/: Builtin.cpp  Builtin.h  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  EventLoop.cpp  EventLoop.h  Value.cpp  Value.h
src/formatter/: Formatter.cpp  Formatter.h  FormatterConfig.h
src/jit/: HotPathDetector.cpp  InliningAnalyzer.cpp  InliningTransformer.cpp  JITCompilerT1.cpp  JITCompilerT2.cpp
src/lexer/: JosaRecognizer.cpp  JosaRecognizer.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/linter/: IssueSeverity.h  Linter.cpp  Linter.h  LinterConfig.h  Rule.cpp  Rule.h
src/lsp/: CompletionProvider.cpp  DiagnosticsProvider.cpp  DocumentManager.cpp  JsonRpc.cpp  LanguageServer.cpp  LspUtils.cpp  SymbolCollector.cpp  SymbolTable.cpp
stdlib/: README.md  array.ksj  collections.ksj  crypto.ksj  db.ksj  http.ksj  io.ksj  json.ksj  math.ksj  os.ksj  regex.ksj  string.ksj  test.ksj  time.ksj  utils.ksj
tests/: ArrayFunctionTypeTest.cpp  ArrayMethodTest.cpp  ArrayTest.cpp  AstTest.cpp  AsyncAwaitTest.cpp  BuiltinTest.cpp  BytecodeTest.cpp  ClassTest.cpp  ConfigTest.cpp  CryptoTest.cpp  EnvironmentTest.cpp  ErrorRecoveryTest.cpp  ErrorTest.cpp  EvaluatorHotPathTest.cpp  EvaluatorTest.cpp  EventLoopTest.cpp  FileIOTest.cpp  FloatTest.cpp  FormatterTest.cpp  FunctionTest.cpp  GCTest.cpp  IfStatementTest.cpp  JSONTest.cpp  JosaRecognizerTest.cpp  LexerTest.cpp  LexerUnderscoreTest.cpp  LinterTest.cpp  LoopStatementTest.cpp  ModuleTest.cpp  NameResolutionTest.cpp  OSTest.cpp  ObjectPoolTest.cpp  PackageTest.cpp  ParserLL2Test.cpp  ParserTest.cpp  PatternMatchingTest.cpp  ProfilerTest.cpp  RegexTest.cpp  SanityTest.cpp  SemanticSymbolTableTest.cpp  (+9 more)
vscode-extension/: README.md  TESTING_GUIDE.md  package-lock.json  package.json  tsconfig.json
wasm/: README.md  test.html
web/: README.md  index.html  package.json  vite.config.js
(+96 files in other folders)
